--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@
             }
             .container .products{
                 grid-template-columns: repeat(auto-fill, minmax(160px, 1fr));
+                gap: 10px;
             }
 
             h1 {
@@ -164,6 +165,7 @@
         font-size: 32px;
     }
 }
+
 
 
 
